--- a/Intro_to_Numpy.ipynb
+++ b/Intro_to_Numpy.ipynb
@@ -1343,7 +1343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "size = ***"
+    "size = 11"
    ]
   },
   {
@@ -1359,7 +1359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "arr = ***"
+    "arr = np.zeros((size,size))"
    ]
   },
   {
@@ -1375,7 +1375,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print()"
+    "print(arr)"
    ]
   },
   {
@@ -1393,10 +1393,20 @@
    "source": [
     "for i in range(size):\n",
     "\tfor j in range(size):\n",
-    "\t\tif ():\n",
-    "\t\t\tarr[][] = 1\n",
-    "\t\telif ():\n",
-    "\t\t\tarr[][] = 1"
+    "\t\tif (i==j):\n",
+    "\t\t\tarr[i][j] = 1\n",
+    "\t\telif (i!=j):\n",
+    "\t\t\tarr[i][j] = 0\n",
+    "arr1=arr[::-1]\n",
+    "print(arr1)\n",
+    "\n",
+    "\n",
+    "for i in range(size):\n",
+    "\tfor j in range(size):\n",
+    "\t\tif (i==j):\n",
+    "\t\t\tarr1[i][j] = 1\n",
+    "\t\telif (i!=j):\n",
+    "\t\t\tarr1[i][j] = 0\n"
    ]
   },
   {
@@ -1412,7 +1422,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(arr)"
+    "print(arr1)"
    ]
   },
   {
