--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -97,7 +97,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "img_bw = cv2.imread(\"./examples/1_8.png\", cv2.IMREAD_GRAYSCALE)"
+    "img_bw = cv2.imread("cat-vector.jpg", cv2.IMREAD_GRAYSCALE)"
    ]
   },
   {
